# ti-daisychain-bms

./: .gitignore  README
firmware-pico/: CMakeLists.txt  bms.c  bms.pio  can.h
hardware/: sym-lib-table  ti-bms-cache.lib  ti-bms.kicad_pcb  ti-bms.kicad_pro  ti-bms.kicad_sch  ti-bms.pro  ti-bms.sch
